feat: added onboarding routes to populate user-details
